# SO_projekt_prom

./: CMakeLists.txt  README.md  master.c
components/: ferry.c  manager.c  passenger.c  utils.c  utils.h
